# Dynamic-Planner-Worker-Pattern-Research-Paper-Writing-Agent

./: .gitignore  README.md  langgraph.json  main.py  practice.ipynb  pyproject.toml  requirements.txt  streamlit_app.py
research_agent/: __init__.py
research_agent/UI/: streamlit_app.py
research_agent/api_key_store/: ssm_parameters.py
research_agent/config/: __init__.py  settings.py
research_agent/evaluators/: __init__.py  research_evaluator.py  worker_evaluator.py
research_agent/graph/: __init__.py  builder.py  graph_entry.py
research_agent/llm/: __init__.py  provider.py
research_agent/output_generator/: __init__.py  output_generator.py
research_agent/planner/: __init__.py  fallback.py  planner.py
research_agent/prompts/: __init__.py  evaluator_prompts.py  planner_prompts.py  worker_prompts.py
research_agent/state/: __init__.py  initializer.py  schema.py
research_agent/summarizer/: __init__.py  summarizer.py
research_agent/utils/: __init__.py  helpers.py  logger.py
research_agent/workers/: __init__.py  base.py  content_workers.py  references_worker.py
